--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     margin-left: 99px;
 }
 .slider-img{
-    height: 400px;
+    height: 500px;
     opacity: 0.9;
 }
 .carousel-caption>h5{
@@ -40,4 +40,27 @@ hr{
 }
 .fa-shopping-cart{
     margin-right: 10px;
+}
+.taka{
+    color: #213E6E;
+    font-family: 'Balsamiq Sans', cursive;
+}
+.bus-text{
+    font-family: 'Lato', sans-serif;
+    color: white;
+}
+
+@media screen and (max-width: 400px) {
+    .offers{
+        margin-top: 20px;
+    }
+    .slider-img{
+        height: 300px;
+    }
+    .welcome{
+        margin-top: 700px;
+    }
+    .netLover{
+        margin-top: 20px;
+    }
 }
