--- a/css/style.css
+++ b/css/style.css
@@ -45,14 +45,22 @@ hr{
     color: #213E6E;
     font-family: 'Balsamiq Sans', cursive;
 }
-.bus-text{
+.fa-arrow-circle-right{
+    color: #333333;
+}
+.bus-list{
+    list-style-type: none;
     font-family: 'Lato', sans-serif;
-    color: white;
+    color: #FAFAF2;
+    line-height: 20px;
 }
 
 @media screen and (max-width: 576px) {
     .offers{
         margin-top: 20px;
+    }
+    #offers{
+        margin-left: 20px;
     }
     .slider-img{
         height: 300px;
